--- a/report.html
+++ b/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,13260],[],[[4,0,0,[],[1,762,12494],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,624],[],[[4,0,0,[],[1,116,257],[]],[5,0,0,[],[0,375,245,6],[]]],[],[2,1,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*actionTest","*C:\\Users\\yuh903\\PycharmProjects\\github-actions-test\\actionTest.robot","*actionTest.robot","*LoginTest"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Cat Test","*C:\\Users\\yuh903\\PycharmProjects\\github-actions-test\\tests\\cat_test.robot","*tests/cat_test.robot","*TC1_Get_Return_All_Spartans","*TC1_Get_Add_New_Spartan","*400 != 200"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"actionTest","name":"actionTest","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:01","fail":1,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:01","fail":1,"id":"s1","label":"Cat Test","name":"Cat Test","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1636717341676;
+window.output["baseMillis"] = 1637783263094;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 13282;
+window.output["generated"] = 641;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
